--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-js-modal": "^2.0.0-rc.3",
+    "vue-router": "^3.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
