--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
-    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
-    "element-ui": "^2.13.2",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
-    "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.3.2"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
