--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "tailwindcss": "^1.4.6",
+    "vee-validate": "^3.3.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.3.2"
+    "vue-router": "^3.3.2",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
@@ -25,6 +27,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
