--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vee-validate": "^3.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.3.2",
+    "vue-tailwind": "^0.4.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
